@@ -2,9 +2,7 @@
 package com.example.ironplan.service;
 
 import com.example.ironplan.model.*;
-import com.example.ironplan.repository.ExerciseRepository;
-import com.example.ironplan.repository.RoutineTemplateRepository;
-import com.example.ironplan.repository.RoutineDetailRepository;
+import com.example.ironplan.repository.*;
 import com.example.ironplan.rest.dto.*;
 import com.example.ironplan.rest.dto.routine.RoutineOverviewResponse;
 import com.example.ironplan.rest.dto.routine.RoutineBlockDto;
@@ -18,20 +16,32 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.Set;
+import java.util.HashSet;
 
 @Service
 public class RoutineTemplateService {
 
     private final RoutineTemplateRepository repo;
-    private final RoutineDetailRepository detailRepo;
+    private final RoutineBlockRepository blockRepo;
     private final ExerciseRepository exerciseRepo;
+    private final UserUnlockedRoutineRepository unlockedRepo;
+    private final UserRepository userRepo;
+    private final AchievementService achievementService;
+
 
     public RoutineTemplateService(RoutineTemplateRepository repo,
-                                  RoutineDetailRepository detailRepo,
-                                  ExerciseRepository exerciseRepo) {
+                                  RoutineBlockRepository blockRepo,
+                                  ExerciseRepository exerciseRepo,
+                                  UserUnlockedRoutineRepository unlockedRepo,
+                                  UserRepository userRepo,
+                                  AchievementService achievementService) {
         this.repo = repo;
-        this.detailRepo = detailRepo;
+        this.blockRepo = blockRepo;
         this.exerciseRepo = exerciseRepo;
+        this.unlockedRepo = unlockedRepo;
+        this.userRepo = userRepo;
+        this.achievementService = achievementService;
     }
 
     // ---------- CREAR RUTINA ----------
@@ -53,6 +63,8 @@ public class RoutineTemplateService {
         routine.setUsageCount(0);
         routine.setXp_cost(0);
         routine.setXp_gain(50); // XP base por completar
+        routine.setRoutineGender(request.routineGender());
+
 
         // Determinar tipo y acceso según si es pública
         if (request.isPublic()) {
@@ -68,52 +80,64 @@ public class RoutineTemplateService {
         // Guardar la rutina primero para obtener ID
         routine = repo.save(routine);
 
-        // 2. Crear las sesiones
+        // 2. Crear los bloques
         int totalSeriesRoutine = 0;
-        for (CreateSessionRequest sessionReq : request.sessions()) {
-            RoutineDetail session = new RoutineDetail();
-            session.setRoutine(routine);
-            session.setTitle(sessionReq.title());
-            session.setIcon(sessionReq.icon());
-            session.setMuscles(sessionReq.muscles());
-            session.setDescription(sessionReq.description());
-            session.setBlockNumber(sessionReq.blockNumber());
-            session.setBlockLabel(sessionReq.blockLabel());
-            session.setOrderInBlock(sessionReq.orderInBlock());
-            session.setSessionOrder(sessionReq.orderInBlock());
+        for (CreateBlockRequest blockReq : request.blocks()) {
+            RoutineBlock block = new RoutineBlock();
+            block.setRoutine(routine);
+            block.setName(blockReq.name());
+            block.setDescription(blockReq.description());
+            block.setOrderIndex(blockReq.orderIndex());
+            block.setDurationWeeks(blockReq.durationWeeks());
 
-            // Calcular total series de la sesión
-            int sessionTotalSeries = 0;
+            // 3. Crear las sesiones del bloque
+            for (CreateSessionRequest sessionReq : blockReq.sessions()) {
+                RoutineDetail session = new RoutineDetail();
+                session.setBlock(block);
+                session.setTitle(sessionReq.title());
+                session.setIcon(sessionReq.icon());
+                session.setMuscles(sessionReq.muscles());
+                session.setDescription(sessionReq.description());
+                session.setSessionOrder(sessionReq.sessionOrder());
 
-            // 3. Crear los ejercicios de la sesión
-            for (CreateExerciseRequest exerciseReq : sessionReq.exercises()) {
-                Exercise exercise = exerciseRepo.findById(exerciseReq.exerciseId())
-                        .orElseThrow(() -> new NotFoundException("Ejercicio no encontrado: " + exerciseReq.exerciseId()));
+                // Calcular total series de la sesión
+                int sessionTotalSeries = 0;
 
-                RoutineExercise routineExercise = new RoutineExercise();
-                routineExercise.setExercise(exercise);
-                routineExercise.setDisplayName(exerciseReq.displayName() != null ? exerciseReq.displayName() : exercise.getName());
-                routineExercise.setExerciseOrder(exerciseReq.exerciseOrder());
-                routineExercise.setSets(exerciseReq.sets());
-                routineExercise.setRepsMin(exerciseReq.repsMin());
-                routineExercise.setRepsMax(exerciseReq.repsMax());
-                routineExercise.setRir(exerciseReq.rir());
-                routineExercise.setRestMinutes(exerciseReq.restMinutes());
+                // 4. Crear los ejercicios de la sesión
+                for (CreateExerciseRequest exerciseReq : sessionReq.exercises()) {
+                    Exercise exercise = exerciseRepo.findById(exerciseReq.exerciseId())
+                            .orElseThrow(() -> new NotFoundException("Ejercicio no encontrado: " + exerciseReq.exerciseId()));
 
-                session.addExercise(routineExercise);
-                sessionTotalSeries += exerciseReq.sets();
+                    RoutineExercise routineExercise = new RoutineExercise();
+                    routineExercise.setExercise(exercise);
+                    routineExercise.setDisplayName(exerciseReq.displayName() != null ? exerciseReq.displayName() : exercise.getName());
+                    routineExercise.setExerciseOrder(exerciseReq.exerciseOrder());
+                    routineExercise.setSets(exerciseReq.sets());
+                    routineExercise.setRepsMin(exerciseReq.repsMin());
+                    routineExercise.setRepsMax(exerciseReq.repsMax());
+                    routineExercise.setRir(exerciseReq.rir());
+                    routineExercise.setRestMinutes(exerciseReq.restMinutes());
+
+                    session.addExercise(routineExercise);
+                    sessionTotalSeries += exerciseReq.sets();
+                }
+
+                session.setTotalSeries(sessionTotalSeries);
+                session.setEstimatedMinutes(sessionTotalSeries * 3); // ~3 min por serie
+                session.setEstimatedXp(sessionTotalSeries * 5); // 5 XP por serie
+
+                block.addSession(session);
+                totalSeriesRoutine += sessionTotalSeries;
             }
 
-            session.setTotalSeries(sessionTotalSeries);
-            session.setEstimatedMinutes(sessionTotalSeries * 3); // ~3 min por serie
-            session.setEstimatedXp(sessionTotalSeries * 5); // 5 XP por serie
-
-            routine.getSessions().add(session);
-            totalSeriesRoutine += sessionTotalSeries;
+            routine.addBlock(block);
         }
 
         // Guardar todo (cascade)
         repo.save(routine);
+
+        // Verificar hazañas de creación de rutinas
+        achievementService.checkRoutineCreationAchievements(user);
 
         return new CreateRoutineResponse(
                 routine.getId(),
@@ -121,6 +145,13 @@ public class RoutineTemplateService {
                 "Rutina creada exitosamente"
         );
     }
+
+    public Page<RoutineListItemResponse> listMine(User user, Pageable pageable) {
+        return repo
+                .findByUser_Id(user.getId(), pageable)
+                .map(this::toListItemResponse);
+    }
+
 
     // ---------- Detalle "ligero" (para modal) ----------
     public RoutineTemplate getById(Long id) {
@@ -135,17 +166,31 @@ public class RoutineTemplateService {
                 r.getId(),
                 r.getName(),
                 r.getGoal(),           // según tu DTO: String / Enum
-                r.getAccess(),         // idem
+                r.getAccess(),
+                r.getImg(),
                 r.getDescription(),
-                r.getSuggestedLevel()  // nivel sugerido para el modal
+                r.getSuggestedLevel(),
+                r.getXp_cost()
+                // nivel sugerido para el modal
         );
     }
 
     // ---------- Listas ----------
     // Catálogo público publicado con filtros opcionales
-    public Page<RoutineListItemResponse> listPublic(String search, Goal goal, Integer daysPerWeek, Pageable pageable) {
-        return repo.findPublicWithFilters(RoutineStatus.PUBLISHED, search, goal, daysPerWeek, pageable)
-                .map(this::toListItemResponse);
+    public Page<RoutineListItemResponse> listPublic(User user, String search, Goal goal, Integer daysPerWeek, RoutineGender routineGender, Pageable pageable) {
+        Page<RoutineTemplate> routines = repo.findPublicWithFilters(RoutineStatus.PUBLISHED, search, goal, daysPerWeek, routineGender, pageable);
+        
+        // Obtener IDs de rutinas desbloqueadas por el usuario actual
+        Set<Long> unlockedRoutineIds = new HashSet<>();
+        if (user != null) {
+            List<Long> routineIds = routines.getContent().stream()
+                    .map(RoutineTemplate::getId)
+                    .toList();
+            unlockedRoutineIds = unlockedRepo.findUnlockedRoutineIdsByUserAndRoutineIds(user.getId(), routineIds);
+        }
+        
+        final Set<Long> finalUnlockedIds = unlockedRoutineIds;
+        return routines.map(r -> toListItemResponseWithUnlock(r, finalUnlockedIds.contains(r.getId())));
     }
 
     // Panel admin (todas)
@@ -157,6 +202,11 @@ public class RoutineTemplateService {
     // Mapea RoutineTemplate a RoutineListItemResponse
     // Si el type es SHARED_COMMUNITY, cambia accessType a USER_SHARED y agrega ownerUsername
     private RoutineListItemResponse toListItemResponse(RoutineTemplate r) {
+        return toListItemResponseWithUnlock(r, false);
+    }
+
+    // Mapea con información de desbloqueo
+    private RoutineListItemResponse toListItemResponseWithUnlock(RoutineTemplate r, boolean unlockedByUser) {
         Access_Type accessType = r.getAccess();
         String ownerUsername = null;
 
@@ -174,49 +224,74 @@ public class RoutineTemplateService {
                 r.getImg(),
                 r.getDescription(),
                 ownerUsername,
-                r.getUsageCount() != null ? r.getUsageCount() : 0
+                r.getUsageCount() != null ? r.getUsageCount() : 0,
+                r.getRoutineGender(),
+                r.getXp_cost(),
+                unlockedByUser
         );
     }
+
+    //Desbloquear rutinas con xp
+    @Transactional
+    public void unlockWithXp(User user, Long routineId) {
+        RoutineTemplate routine = repo.findById(routineId)
+                .orElseThrow(() -> new NotFoundException("Rutina no encontrada"));
+
+        if (routine.getAccess() != Access_Type.XP_UNLOCK) {
+            throw new IllegalStateException("Esta rutina no requiere XP");
+        }
+
+        // ¿Ya desbloqueada?
+        if (unlockedRepo.existsByUser_IdAndRoutine_Id(user.getId(), routineId)) {
+            return; // ya estaba desbloqueada
+        }
+
+        int cost = routine.getXp_cost();
+
+        if (user.getXpPoints() < cost) {
+            throw new IllegalStateException("XP insuficiente");
+        }
+
+        // Descontar XP
+        user.setXpPoints(user.getXpPoints() - cost);
+        userRepo.save(user);
+
+        // Registrar desbloqueo
+        UserUnlockedRoutine unlock = new UserUnlockedRoutine();
+        unlock.setUser(user);
+        unlock.setRoutine(routine);
+        unlockedRepo.save(unlock);
+    }
+
 
     // ---------- OVERVIEW grande (Rutina Híbrida) ----------
     public RoutineOverviewResponse getOverview(Long routineId) {
         RoutineTemplate r = getById(routineId);
 
-        // Traer todas las sesiones (RoutineDetail) ordenadas
-        List<RoutineDetail> details = detailRepo
-                .findByRoutine_IdOrderByBlockNumberAscOrderInBlockAsc(routineId);
+        // Traer todos los bloques ordenados
+        List<RoutineBlock> routineBlocks = blockRepo.findByRoutine_IdOrderByOrderIndexAsc(routineId);
 
-        // Agrupar por bloque
-        Map<Integer, List<RoutineDetail>> grouped =
-                details.stream().collect(Collectors.groupingBy(
-                        RoutineDetail::getBlockNumber,
-                        LinkedHashMap::new,
-                        Collectors.toList()
-                ));
+        List<RoutineBlockDto> blocks = routineBlocks.stream()
+                .map(block -> {
+                    List<RoutineBlockItemDto> items = block.getSessions().stream()
+                            .map(session -> new RoutineBlockItemDto(
+                                    session.getId(),
+                                    session.getTitle(),
+                                    session.getTotalSeries(),
+                                    session.getMuscles()
+                            ))
+                            .toList();
 
-        List<RoutineBlockDto> blocks = new ArrayList<>();
-
-        for (var entry : grouped.entrySet()) {
-            int blockNumber = entry.getKey();
-            List<RoutineDetail> sessions = entry.getValue();
-
-            String blockLabel = sessions.get(0).getBlockLabel(); // Semana 1–12, etc.
-
-            List<RoutineBlockItemDto> items = sessions.stream()
-                    .map(d -> new RoutineBlockItemDto(
-                            d.getId(),
-                            d.getTitle(),
-                            d.getTotalSeries(),
-                            d.getMuscles()
-                    ))
-                    .toList();
-
-            blocks.add(new RoutineBlockDto(
-                    blockNumber,
-                    "Bloque " + blockNumber + " — " + blockLabel,
-                    items
-            ));
-        }
+                    return new RoutineBlockDto(
+                            block.getId(),
+                            block.getOrderIndex(),
+                            block.getName(),
+                            block.getDescription(),
+                            block.getDurationWeeks(),
+                            items
+                    );
+                })
+                .toList();
 
         return new RoutineOverviewResponse(
                 r.getId(),
@@ -230,4 +305,3 @@ public class RoutineTemplateService {
         );
     }
 }
-
